--- a/app.css
+++ b/app.css
@@ -53,3 +53,16 @@ h3{
 display: flex;
 flex-direction: column;
 }
+.flex-center {
+    justify-content: center;
+    align-items: center;
+}
+.justify-center{
+    justify-content: center;
+}
+.text-center{
+    text-align: center;
+}
+.hidden{
+    display: none;
+}
